<?xml version="1.0" encoding="utf-8"?>
<!-- Fragment to display ingredients -->
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorBackground"
    android:id="@+id/layout_ingredients">

    <androidx.recyclerview.widget.RecyclerView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:id="@+id/recycler_fragment_ingredientSteps" >
    </androidx.recyclerview.widget.RecyclerView>

</LinearLayout>