<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".fragment.SelectedStepFragment">

    <TextView
        android:id="@+id/text_selectedStep"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        style="@style/Heading3" />

</FrameLayout>